Assignment2/CALParser/CALParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. CALParser.java */
import java.util.*;
import java.io.*;

public class CALParser/*@bgen(jjtree)*/implements CALParserTreeConstants, CALParserConstants {/*@bgen(jjtree)*/
  protected static JJTCALParserState jjtree = new JJTCALParserState();
    public static STC ST = new STC();
    public static String scope = "global";

    public static void main(String[] args) {


        CALParser parser;
        if (args.length == 0) {
            System.out.println("Reading from standard input...");
            parser = new CALParser(System.in);
        } else if (args.length == 1) {
            try {
                parser = new CALParser(new java.io.FileInputStream(args[0]));
            } catch (java.io.FileNotFoundException e) {
                System.err.println("File " + args[0] + " not found.");

                return;
            }
        } else {
            System.out.println("CAL Parser: Usage is one of:");
            System.out.println("    java CALParser < inputfile");
            System.out.println("OR");
            System.out.println("    java CALParser inputfile");

            return;
        }

    try {
        //AST
        System.out.println("***ABSTRACT SYSTAX TREE***");
        SimpleNode root = parser.program();
        root.dump("");
        System.out.println("**************************");
        System.out.println();

        //SYMBOL TABLE
        System.out.println("******SYMBOL TABLE********");
        ST.printTable();
        System.out.println("**************************");
        System.out.println();

        //SEMANTIC ANALYSIS

        //3 ADDRESS CODE


    } catch (ParseException e) {
        System.out.println(e.getMessage());
        System.out.println("CAL Parser: Encountered errors during the parse.");
    }

    }

/***********************************
 ***** SECTION 4 - THE GRAMMAR *****
 ***********************************/

//my code
  static final public SimpleNode program() throws ParseException {
                             /*@bgen(jjtree) PROG */
  PROG jjtn000 = new PROG(JJTPROG);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      decl_list();
      function_list();
      main();
      jj_consume_token(0);
            jjtree.closeNodeScope(jjtn000, true);
            jjtc000 = false;
           {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void decl_list() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VAR:
    case CONST:
      decl();
      jj_consume_token(SEMIC);
      decl_list();
      break;
    default:
      jj_la1[0] = jj_gen;

    }
  }

  static final public void decl() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VAR:
      var_decl();
      break;
    case CONST:
      const_decl();
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void var_decl() throws ParseException {
                            /*@bgen(jjtree) VARDECL */
                            VARDECL jjtn000 = new VARDECL(JJTVARDECL);
                            boolean jjtc000 = true;
                            jjtree.openNodeScope(jjtn000);Token t; String id; String type;
    try {
      t = jj_consume_token(VAR);
      id = Identifier();
      jj_consume_token(COLON);
      type = type();
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
        jjtn000.value = t.image;
        ST.add(id, type, "var", scope);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void const_decl() throws ParseException {
                               /*@bgen(jjtree) CONSTDECL */
                               CONSTDECL jjtn000 = new CONSTDECL(JJTCONSTDECL);
                               boolean jjtc000 = true;
                               jjtree.openNodeScope(jjtn000);Token t; String id; String type;
    try {
      t = jj_consume_token(CONST);
      id = Identifier();
      jj_consume_token(COLON);
      type = type();
      jj_consume_token(ASSIGN);
      expression();
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
        jjtn000.value = t.image;
        ST.add(id, type, "const", scope);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void function_list() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
    case BOOL:
    case VOID:
      function();
      function_list();
      break;
    default:
      jj_la1[2] = jj_gen;

    }
  }

  static final public void function() throws ParseException {
                            /*@bgen(jjtree) FUNCTION */
                            FUNCTION jjtn000 = new FUNCTION(JJTFUNCTION);
                            boolean jjtc000 = true;
                            jjtree.openNodeScope(jjtn000);Token t; String type; String id;
    try {
      type = type();
      id = Identifier();
                                     ST.add(id, type, "func", scope); scope = id;
      jj_consume_token(LPAREN);
      parameter_list();
      jj_consume_token(RPAREN);
      jj_consume_token(IS);
      decl_list();
      jj_consume_token(BEGIN);
      statement_block();
      jj_consume_token(RETURN);
      jj_consume_token(LPAREN);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TRUE:
      case FALSE:
      case MINUS:
      case NUMBER:
      case ID:
        expression();
        break;
      default:
        jj_la1[3] = jj_gen;

      }
      jj_consume_token(RPAREN);
                                                     RETURN jjtn001 = new RETURN(JJTRETURN);
                                                     boolean jjtc001 = true;
                                                     jjtree.openNodeScope(jjtn001);
      try {
        jj_consume_token(SEMIC);
      } finally {
                                                     if (jjtc001) {
                                                       jjtree.closeNodeScope(jjtn001, true);
                                                     }
      }
      jj_consume_token(END);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public String type() throws ParseException {
                       /*@bgen(jjtree) TYPE */
                       TYPE jjtn000 = new TYPE(JJTTYPE);
                       boolean jjtc000 = true;
                       jjtree.openNodeScope(jjtn000);Token t;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
        t = jj_consume_token(INT);
                  jjtree.closeNodeScope(jjtn000, true);
                  jjtc000 = false;
                 jjtn000.value = t.image; {if (true) return t.image;}
        break;
      case BOOL:
        t = jj_consume_token(BOOL);
                  jjtree.closeNodeScope(jjtn000, true);
                  jjtc000 = false;
                 jjtn000.value = t.image; {if (true) return t.image;}
        break;
      case VOID:
        t = jj_consume_token(VOID);
                  jjtree.closeNodeScope(jjtn000, true);
                  jjtc000 = false;
                 jjtn000.value = t.image; {if (true) return t.image;}
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void parameter_list() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ID:
      nemp_parameter_list();
      break;
    default:
      jj_la1[5] = jj_gen;

    }
  }

  static final public void nemp_parameter_list() throws ParseException {
                                     /*@bgen(jjtree) PARAM */
                                     PARAM jjtn000 = new PARAM(JJTPARAM);
                                     boolean jjtc000 = true;
                                     jjtree.openNodeScope(jjtn000);String id; String type;
    try {
      id = Identifier();
      jj_consume_token(COLON);
      type = type();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        jj_consume_token(COMMA);
        nemp_parameter_list();
        break;
      default:
        jj_la1[6] = jj_gen;

      }
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
        ST.add(id, type, "param", scope);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void main() throws ParseException {
                     /*@bgen(jjtree) MAIN */
                     MAIN jjtn000 = new MAIN(JJTMAIN);
                     boolean jjtc000 = true;
                     jjtree.openNodeScope(jjtn000);Token t;
    try {
     scope = "main";
      t = jj_consume_token(MAIN);
      jj_consume_token(BEGIN);
      decl_list();
      statement_block();
      jj_consume_token(END);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void statement_block() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IF:
    case WHILE:
    case BEGIN:
    case SKP:
    case ID:
      statement();
      statement_block();
      break;
    default:
      jj_la1[7] = jj_gen;

    }
  }

  static final public void statement() throws ParseException {
                    Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ID:
      Identifier();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ASSIGN:
        t = jj_consume_token(ASSIGN);
        expression();
        jj_consume_token(SEMIC);
                                                       ASSIGN jjtn001 = new ASSIGN(JJTASSIGN);
                                                       boolean jjtc001 = true;
                                                       jjtree.openNodeScope(jjtn001);
        try {
                                                       jjtree.closeNodeScope(jjtn001, true);
                                                       jjtc001 = false;
                                                      jjtn001.value = t.image;
        } finally {
                                                       if (jjtc001) {
                                                         jjtree.closeNodeScope(jjtn001, true);
                                                       }
        }
        break;
      case LPAREN:
        t = jj_consume_token(LPAREN);
        arg_list();
        jj_consume_token(RPAREN);
        jj_consume_token(SEMIC);
                                                              ASSIGN jjtn002 = new ASSIGN(JJTASSIGN);
                                                              boolean jjtc002 = true;
                                                              jjtree.openNodeScope(jjtn002);
        try {
                                                              jjtree.closeNodeScope(jjtn002, true);
                                                              jjtc002 = false;
                                                             jjtn002.value = t.image;
        } finally {
                                                              if (jjtc002) {
                                                                jjtree.closeNodeScope(jjtn002, true);
                                                              }
        }
        break;
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    case BEGIN:
      jj_consume_token(BEGIN);
      statement_block();
      jj_consume_token(END);
      break;
    case IF:
      t = jj_consume_token(IF);
      condition();
      jj_consume_token(BEGIN);
      statement_block();
      jj_consume_token(END);
      jj_consume_token(ELSE);
      jj_consume_token(BEGIN);
      statement_block();
      jj_consume_token(END);
                                                                                                  STATMENT jjtn003 = new STATMENT(JJTSTATMENT);
                                                                                                  boolean jjtc003 = true;
                                                                                                  jjtree.openNodeScope(jjtn003);
      try {
                                                                                                  jjtree.closeNodeScope(jjtn003, true);
                                                                                                  jjtc003 = false;
                                                                                                 jjtn003.value = t.image;
      } finally {
                                                                                                  if (jjtc003) {
                                                                                                    jjtree.closeNodeScope(jjtn003, true);
                                                                                                  }
      }
      break;
    case WHILE:
      t = jj_consume_token(WHILE);
      condition();
      jj_consume_token(BEGIN);
      statement_block();
      jj_consume_token(END);
                                                              STATMENT jjtn004 = new STATMENT(JJTSTATMENT);
                                                              boolean jjtc004 = true;
                                                              jjtree.openNodeScope(jjtn004);
      try {
                                                              jjtree.closeNodeScope(jjtn004, true);
                                                              jjtc004 = false;
                                                             jjtn004.value = t.image;
      } finally {
                                                              if (jjtc004) {
                                                                jjtree.closeNodeScope(jjtn004, true);
                                                              }
      }
      break;
    case SKP:
      jj_consume_token(SKP);
      jj_consume_token(SEMIC);
      break;
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void expression() throws ParseException {
    fragment();
    expressionPrime();
  }

  static final public void expressionPrime() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PLUS:
    case MINUS:
      binary_arith_op();
      expression();
      expressionPrime();
      break;
    default:
      jj_la1[10] = jj_gen;

    }
  }

  static final public void fragment() throws ParseException {
                   Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ID:
      t = jj_consume_token(ID);
                FRETURN jjtn001 = new FRETURN(JJTFRETURN);
                boolean jjtc001 = true;
                jjtree.openNodeScope(jjtn001);
      try {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LPAREN:
          jj_consume_token(LPAREN);
          arg_list();
          jj_consume_token(RPAREN);
          break;
        default:
          jj_la1[11] = jj_gen;

        }
                                  jjtree.closeNodeScope(jjtn001, true);
                                  jjtc001 = false;
                                 jjtn001.value = t.image;
      } catch (Throwable jjte001) {
                if (jjtc001) {
                  jjtree.clearNodeScope(jjtn001);
                  jjtc001 = false;
                } else {
                  jjtree.popNode();
                }
                if (jjte001 instanceof RuntimeException) {
                  {if (true) throw (RuntimeException)jjte001;}
                }
                if (jjte001 instanceof ParseException) {
                  {if (true) throw (ParseException)jjte001;}
                }
                {if (true) throw (Error)jjte001;}
      } finally {
                if (jjtc001) {
                  jjtree.closeNodeScope(jjtn001, true);
                }
      }
      break;
    case MINUS:
      t = jj_consume_token(MINUS);
      Identifier();
                                  MINUSOP jjtn002 = new MINUSOP(JJTMINUSOP);
                                  boolean jjtc002 = true;
                                  jjtree.openNodeScope(jjtn002);
      try {
                                  jjtree.closeNodeScope(jjtn002, true);
                                  jjtc002 = false;
                                 jjtn002.value = t.image;
      } finally {
                                  if (jjtc002) {
                                    jjtree.closeNodeScope(jjtn002, true);
                                  }
      }
      break;
    case NUMBER:
      t = jj_consume_token(NUMBER);
                                  NUMBER jjtn003 = new NUMBER(JJTNUMBER);
                                  boolean jjtc003 = true;
                                  jjtree.openNodeScope(jjtn003);
      try {
                                  jjtree.closeNodeScope(jjtn003, true);
                                  jjtc003 = false;
                                 jjtn003.value = t.image;
      } finally {
                                  if (jjtc003) {
                                    jjtree.closeNodeScope(jjtn003, true);
                                  }
      }
      break;
    case TRUE:
      t = jj_consume_token(TRUE);
                                  TRUEOP jjtn004 = new TRUEOP(JJTTRUEOP);
                                  boolean jjtc004 = true;
                                  jjtree.openNodeScope(jjtn004);
      try {
                                  jjtree.closeNodeScope(jjtn004, true);
                                  jjtc004 = false;
                                 jjtn004.value = t.image;
      } finally {
                                  if (jjtc004) {
                                    jjtree.closeNodeScope(jjtn004, true);
                                  }
      }
      break;
    case FALSE:
      t = jj_consume_token(FALSE);
                                  FALSEOP jjtn005 = new FALSEOP(JJTFALSEOP);
                                  boolean jjtc005 = true;
                                  jjtree.openNodeScope(jjtn005);
      try {
                                  jjtree.closeNodeScope(jjtn005, true);
                                  jjtc005 = false;
                                 jjtn005.value = t.image;
      } finally {
                                  if (jjtc005) {
                                    jjtree.closeNodeScope(jjtn005, true);
                                  }
      }
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void binary_arith_op() throws ParseException {
                          Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PLUS:
      t = jj_consume_token(PLUS);
                 PLUSOP jjtn001 = new PLUSOP(JJTPLUSOP);
                 boolean jjtc001 = true;
                 jjtree.openNodeScope(jjtn001);
      try {
                 jjtree.closeNodeScope(jjtn001, true);
                 jjtc001 = false;
                jjtn001.value = t.image;
      } finally {
                 if (jjtc001) {
                   jjtree.closeNodeScope(jjtn001, true);
                 }
      }
      break;
    case MINUS:
      t = jj_consume_token(MINUS);
                  MINOP jjtn002 = new MINOP(JJTMINOP);
                  boolean jjtc002 = true;
                  jjtree.openNodeScope(jjtn002);
      try {
                  jjtree.closeNodeScope(jjtn002, true);
                  jjtc002 = false;
                 jjtn002.value = t.image;
      } finally {
                  if (jjtc002) {
                    jjtree.closeNodeScope(jjtn002, true);
                  }
      }
      break;
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void condition() throws ParseException {
    if (jj_2_1(2147483647)) {
      comparison();
      conditionPrime();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NEGATE:
        jj_consume_token(NEGATE);
               NEGATE jjtn001 = new NEGATE(JJTNEGATE);
               boolean jjtc001 = true;
               jjtree.openNodeScope(jjtn001);
        try {
          condition();
        } catch (Throwable jjte001) {
               if (jjtc001) {
                 jjtree.clearNodeScope(jjtn001);
                 jjtc001 = false;
               } else {
                 jjtree.popNode();
               }
               if (jjte001 instanceof RuntimeException) {
                 {if (true) throw (RuntimeException)jjte001;}
               }
               if (jjte001 instanceof ParseException) {
                 {if (true) throw (ParseException)jjte001;}
               }
               {if (true) throw (Error)jjte001;}
        } finally {
               if (jjtc001) {
                 jjtree.closeNodeScope(jjtn001,  1);
               }
        }
        conditionPrime();
        break;
      case LPAREN:
        jj_consume_token(LPAREN);
        condition();
        jj_consume_token(RPAREN);
        conditionPrime();
        break;
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void comparison() throws ParseException {
                                 /*@bgen(jjtree) COMPARISON */
  COMPARISON jjtn000 = new COMPARISON(JJTCOMPARISON);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      expression();
      comp_op();
      expression();
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void conditionPrime() throws ParseException {
                         Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case OR:
      t = jj_consume_token(OR);
      condition();
                              ORCOND jjtn001 = new ORCOND(JJTORCOND);
                              boolean jjtc001 = true;
                              jjtree.openNodeScope(jjtn001);
      try {
                              jjtree.closeNodeScope(jjtn001,  2);
                              jjtc001 = false;
                             jjtn001.value = t.image;
      } finally {
                              if (jjtc001) {
                                jjtree.closeNodeScope(jjtn001,  2);
                              }
      }
      break;
    case AND:
      t = jj_consume_token(AND);
      condition();
                              ANDCOND jjtn002 = new ANDCOND(JJTANDCOND);
                              boolean jjtc002 = true;
                              jjtree.openNodeScope(jjtn002);
      try {
                              jjtree.closeNodeScope(jjtn002,  2);
                              jjtc002 = false;
                             jjtn002.value = t.image;
      } finally {
                              if (jjtc002) {
                                jjtree.closeNodeScope(jjtn002,  2);
                              }
      }
      break;
    default:
      jj_la1[15] = jj_gen;

    }
  }
